# veriframe

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docker.yml  publish.yml  testing.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: veriframe.ipynb
onverify/: __init__.py  cli.py  plot.py  site_base.py  stats.py  vardef.yml  veriframe.py  verify.py  verifyframe.py
onverify/core/: defaults.yml  regression.py  stats.py  taylorDiagram.py  verifyframe.py  windrose.py
onverify/io/: file.py  gbq.py  gcs.py
onverify/satellite/: timeseries.py  timeseries_gbq.py  utils.py  verify.py
src/veriframe/: satellite.py  veriframe.py  verisat.py
tests/: create_test_data.py  test_onverify.py  test_plotting.py  test_stats.py  test_verisat.py
tests/core/: test_io.py  test_plotting.py  test_slicing.py  test_stats.py  test_taylordiagrams.py
tests/data/: colocs.csv
tests/data/baltic.zarr/depth/: 0.0.0  0.0.1
tests/data/baltic.zarr/hs/: 0.0.0  0.0.1
tests/data/baltic.zarr/latitude/: 0
tests/data/baltic.zarr/longitude/: 0
tests/data/baltic.zarr/time/: 0
tests/io/: test_gbq.py
tests/sample_files/: collocs.pkl  ww3.nc
tests/satellite/: test_altverify.py
utils/: ndbcdap.py
