[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "veriframe"
description = "Dataframe for model verification"
readme = "README.rst"
authors = [
  {name = "Oceanum Developers", email = "developers@oceanum.science"}
]
maintainers = [
  {name = "Oceanum Developers", email = "developers@oceanum.science"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "cartopy",
  "matplotlib",
  "pyyaml",
  "scipy",
  "tabulate",
  "typer",
  "xarray",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff",
    "sphinx",
    "tox",
    "twine",
]

[project.urls]

bugs = "https://github.com/oceanum/veriframe/issues"
changelog = "https://github.com/oceanum/veriframe/blob/master/changelog.md"
homepage = "https://github.com/oceanum/veriframe"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

